--- a/Inscryption Counter.html
+++ b/Inscryption Counter.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Counter App</title>
+	<title>Inscryption Counter</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 
