--- a/Inscryption Counter.html
+++ b/Inscryption Counter.html
@@ -10,6 +10,7 @@
 	<div class="container">
 		<h1>Counter App</h1>
 		<div class="counter">
+			<img src="Images/Scale.png" alt="Scale">
 			<button id="increment-btn">+</button>
 			<div id="counter-value">0</div>
 			<button id="decrement-btn">-</button>
