change html stuff

--- a/Inscryption Counter.html
+++ b/Inscryption Counter.html
@@ -8,13 +8,12 @@
 
 <body>
 	<div class="container">
-		<h1>Counter App</h1>
 		<div class="counter">
-			<img src="Images/Scale.png" alt="Scale">
-			<button id="increment-btn">+</button>
+			<img src="Images/Scale.png" alt="Scale" style="width:33%; height: 100%;">
 			<div id="counter-value">0</div>
-			<button id="decrement-btn">-</button>
 		</div>
+		<button id="increment-btn">+</button>
+		<button id="decrement-btn">-</button>
 		<button id="reset">Reset</button>
 	</div>
 
