--- a/Inscryption Counter.html
+++ b/Inscryption Counter.html
@@ -11,10 +11,12 @@
 		<div class="counter">
 			<img src="Images/Scale.png" alt="Scale" style="width:33%; height: 100%;">
 			<div id="counter-value">0</div>
+			<div>
+				<button id="increment-btn">+</button>
+				<button id="decrement-btn">-</button>
+				<button id="reset">Reset</button>
+			</div>
 		</div>
-		<button id="increment-btn">+</button>
-		<button id="decrement-btn">-</button>
-		<button id="reset">Reset</button>
 	</div>
 
 	<script src="counter.js"></script>
