--- a/Inscryption Counter.html
+++ b/Inscryption Counter.html
@@ -10,7 +10,7 @@
 	<div class="container">
 		<div class="counter">
 			<img src="Images/Scale.png" alt="Scale" style="width:33%; height: 100%;">
-			<div id="counter-value">0</div>
+			<div id="counter-valueR">0</div>
 			<div>
 				<button id="increment-btn">+</button>
 				<button id="decrement-btn">-</button>
