--- a/Inscryption Counter.html
+++ b/Inscryption Counter.html
@@ -12,8 +12,8 @@
 			<img src="Images/Scale.png" alt="Scale" style="width:33%; height: 100%;">
 			<div id="counter-valueR">0</div>
 			<div>
-				<button id="increment-btn">+</button>
-				<button id="decrement-btn">-</button>
+				<button id="increment-btnR">+</button>
+				<button id="decrement-btnR">-</button>
 			</div>
 		</div>
 	</div>
