--- a/Inscryption Counter.html
+++ b/Inscryption Counter.html
@@ -11,6 +11,7 @@
 		<div class="counter">
 			<img src="Images/Scale.png" alt="Scale" style="width:33%; height: 100%;">
 			<div id="counter-valueR">0</div>
+			<div id="counter-valueL">0</div>
 			<div>
 				<button id="increment-btnR">+</button>
 				<button id="decrement-btnR">-</button>
