--- a/Inscryption Counter.html
+++ b/Inscryption Counter.html
@@ -12,10 +12,10 @@
 			<img src="Images/Scale.png" alt="Scale" style="width:33%; height: 100%;">
 			<div id="counter-valueR">0</div>
 			<div id="counter-valueL">0</div>
-			<div>
-				<button id="increment-btnR">+</button>
-				<button id="decrement-btnR">-</button>
-			</div>
+			<button id="increment-btnR">+</button>
+			<button id="decrement-btnR">-</button>
+			<button id="increment-btnL">+</button>
+			<button id="decrement-btnL">-</button>
 		</div>
 	</div>
 
