--- a/Inscryption Counter.html
+++ b/Inscryption Counter.html
@@ -8,7 +8,7 @@
 
 <body>
 	<div class="container">
-		<div class="counter">
+		<div class="scale-counter">
 			<img src="Images/Scale.png" alt="Scale" style="width:33%; height: 100%;">
 			<div id="counter-valueR">0</div>
 			<div id="counter-valueL">0</div>
