--- a/Inscryption Counter.html
+++ b/Inscryption Counter.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="container">
 		<div class="scale-counter">
-			<img src="Images/Scale.png" alt="Scale" style="width:33%; height: 100%;">
+			<img src="Images/Scale.png" id="scale" alt="Scale" style="width:33%; height: 100%;">
 			<div id="counter-valueR">0</div>
 			<div id="counter-valueL">0</div>
 			<button id="increment-btnR">+</button>
