--- a/Inscryption Counter.html
+++ b/Inscryption Counter.html
@@ -15,6 +15,18 @@
 			<button id="increment-btnR">+</button>
 			<button id="increment-btnL">+</button>
 		</div>
+		<div class= "card-counterTOP">
+			<img src="Images/card back.png" id="T1" alt="card back" style="width:5%; height: 100%;">
+			<img src="Images/card back.png" id="T2" alt="card back" style="width:5%; height: 100%;">
+			<img src="Images/card back.png" id="T3" alt="card back" style="width:5%; height: 100%;">
+			<img src="Images/card back.png" id="T4" alt="card back" style="width:5%; height: 100%;">
+		</div>
+		<div class= "card-counterBottom">
+			<img src="Images/card back.png" id="B1" alt="card back" style="width:5%; height: 100%;">
+			<img src="Images/card back.png" id="B2" alt="card back" style="width:5%; height: 100%;">
+			<img src="Images/card back.png" id="B3" alt="card back" style="width:5%; height: 100%;">
+			<img src="Images/card back.png" id="B4" alt="card back" style="width:5%; height: 100%;">
+		</div>
 	</div>
 
 	<script src="counter.js"></script>
