--- a/Inscryption Counter.html
+++ b/Inscryption Counter.html
@@ -21,7 +21,7 @@
 			<img src="Images/card back.png" id="T3" alt="card back" style="width:5%; height: 100%;">
 			<img src="Images/card back.png" id="T4" alt="card back" style="width:5%; height: 100%;">
 		</div>
-		<div class= "card-counterBottom">
+		<div class= "card-counterBOTTOM">
 			<img src="Images/card back.png" id="B1" alt="card back" style="width:5%; height: 100%;">
 			<img src="Images/card back.png" id="B2" alt="card back" style="width:5%; height: 100%;">
 			<img src="Images/card back.png" id="B3" alt="card back" style="width:5%; height: 100%;">
