--- a/Inscryption Counter.html
+++ b/Inscryption Counter.html
@@ -15,12 +15,16 @@
 			<button id="increment-btnR">+</button>
 			<button id="increment-btnL">+</button>
 		</div>
+	</div>
+	<div class="container">
 		<div class="card-counterTOP">
 			<img src="Images/card back.png" id="T1" alt="card back" style="width:10%; height: 100%;">
 			<img src="Images/card back.png" id="T2" alt="card back" style="width:10%; height: 100%;">
 			<img src="Images/card back.png" id="T3" alt="card back" style="width:10%; height: 100%;">
 			<img src="Images/card back.png" id="T4" alt="card back" style="width:10%; height: 100%;">
 		</div>
+	</div>
+	<div class="container">
 		<div class="card-counterBOTTOM">
 			<img src="Images/card back.png" id="B1" alt="card back" style="width:10%; height: 100%;">
 			<img src="Images/card back.png" id="B2" alt="card back" style="width:10%; height: 100%;">
@@ -28,7 +32,6 @@
 			<img src="Images/card back.png" id="B4" alt="card back" style="width:10%; height: 100%;">
 		</div>
 	</div>
-
 	<script src="counter.js"></script>
 </body>
 
