--- a/Inscryption Counter.html
+++ b/Inscryption Counter.html
@@ -8,20 +8,20 @@
 
 <body>
 	<div class="container">
-		<div class="scale-counter">
+		<div id="scale-counter">
 			<img src="Images/Scale.png" id="scale" alt="Scale" style="width:33%; height: 100%;">
 			<div id="counter-valueR">0</div>
 			<div id="counter-valueL">0</div>
 			<button id="increment-btnR">+</button>
 			<button id="increment-btnL">+</button>
 		</div>
-		<div class="card-counterTOP">
+		<div id="card-counterTOP">
 			<img src="Images/card back.png" id="T1" alt="card back" style="width:10%; height: 100%;">
 			<img src="Images/card back.png" id="T2" alt="card back" style="width:10%; height: 100%;">
 			<img src="Images/card back.png" id="T3" alt="card back" style="width:10%; height: 100%;">
 			<img src="Images/card back.png" id="T4" alt="card back" style="width:10%; height: 100%;">
 		</div>
-		<div class="card-counterBOTTOM">
+		<div id="card-counterBOTTOM">
 			<img src="Images/card back.png" id="B1" alt="card back" style="width:10%; height: 100%;">
 			<img src="Images/card back.png" id="B2" alt="card back" style="width:10%; height: 100%;">
 			<img src="Images/card back.png" id="B3" alt="card back" style="width:10%; height: 100%;">
