--- a/Inscryption Counter.html
+++ b/Inscryption Counter.html
@@ -14,18 +14,14 @@
 			<div id="counter-valueL">0</div>
 			<button id="increment-btnR">+</button>
 			<button id="increment-btnL">+</button>
-		</div>
-		<div id="card-counterTOP">
-			<img src="Images/card back.png" id="T1" alt="card back" style="width:10%; height: 100%;">
-			<img src="Images/card back.png" id="T2" alt="card back" style="width:10%; height: 100%;">
-			<img src="Images/card back.png" id="T3" alt="card back" style="width:10%; height: 100%;">
-			<img src="Images/card back.png" id="T4" alt="card back" style="width:10%; height: 100%;">
-		</div>
-		<div id="card-counterBOTTOM">
-			<img src="Images/card back.png" id="B1" alt="card back" style="width:10%; height: 100%;">
-			<img src="Images/card back.png" id="B2" alt="card back" style="width:10%; height: 100%;">
-			<img src="Images/card back.png" id="B3" alt="card back" style="width:10%; height: 100%;">
-			<img src="Images/card back.png" id="B4" alt="card back" style="width:10%; height: 100%;">
+			<img src="Images/card back.png" id="T1" alt="card back">
+			<img src="Images/card back.png" id="T2" alt="card back">
+			<img src="Images/card back.png" id="T3" alt="card back">
+			<img src="Images/card back.png" id="T4" alt="card back">
+			<img src="Images/card back.png" id="B1" alt="card back">
+			<img src="Images/card back.png" id="B2" alt="card back">
+			<img src="Images/card back.png" id="B3" alt="card back">
+			<img src="Images/card back.png" id="B4" alt="card back">
 		</div>
 	</div>
 	<script src="counter.js"></script>
