--- a/Inscryption Counter.html
+++ b/Inscryption Counter.html
@@ -15,9 +15,13 @@
 			<button id="increment-btnR">+</button>
 			<button id="increment-btnL">+</button>
 			<img src="Images/card back.png" id="T1" alt="card back">
+			<div id="counter-valueT1">0</div>
 			<img src="Images/card back.png" id="T2" alt="card back">
+			<div id="counter-valueT1">0</div>
 			<img src="Images/card back.png" id="T3" alt="card back">
+			<div id="counter-valueT1">0</div>
 			<img src="Images/card back.png" id="T4" alt="card back">
+			<div id="counter-valueT1">0</div>
 			<img src="Images/card back.png" id="B1" alt="card back">
 			<img src="Images/card back.png" id="B2" alt="card back">
 			<img src="Images/card back.png" id="B3" alt="card back">
