--- a/Inscryption Counter.html
+++ b/Inscryption Counter.html
@@ -17,15 +17,19 @@
 			<img src="Images/card back.png" id="T1" alt="card back">
 			<div id="counter-valueT1">0</div>
 			<img src="Images/card back.png" id="T2" alt="card back">
-			<div id="counter-valueT1">0</div>
+			<div id="counter-valueT2">0</div>
 			<img src="Images/card back.png" id="T3" alt="card back">
-			<div id="counter-valueT1">0</div>
+			<div id="counter-valueT3">0</div>
 			<img src="Images/card back.png" id="T4" alt="card back">
-			<div id="counter-valueT1">0</div>
+			<div id="counter-valueT4">0</div>
 			<img src="Images/card back.png" id="B1" alt="card back">
+			<div id="counter-valueB1">0</div>
 			<img src="Images/card back.png" id="B2" alt="card back">
+			<div id="counter-valueB2">0</div>
 			<img src="Images/card back.png" id="B3" alt="card back">
+			<div id="counter-valueB3">0</div>
 			<img src="Images/card back.png" id="B4" alt="card back">
+			<div id="counter-valueB4">0</div>
 		</div>
 	</div>
 	<script src="counter.js"></script>
