--- a/Inscryption Counter.html
+++ b/Inscryption Counter.html
@@ -15,29 +15,29 @@
 			<button id="increment-btnR">+</button>
 			<button id="increment-btnL">+</button>
 			<img src="Images/card back.png" id="T1" alt="card back">
-			<div id="counter-valueT1A">0</div>
-			<div id="counter-valueT1H">0</div>
+			<div class="attack" id="counter-valueT1A">0</div>
+			<div class="health" id="counter-valueT1H">0</div>
 			<img src="Images/card back.png" id="T2" alt="card back">
-			<div id="counter-valueT2A">0</div>
-			<div id="counter-valueT2A">0</div>
+			<div class="attack" id="counter-valueT2A">0</div>
+			<div class="health" id="counter-valueT2H">0</div>
 			<img src="Images/card back.png" id="T3" alt="card back">
-			<div id="counter-valueT3A">0</div>
-			<div id="counter-valueT3H">0</div>
+			<div class="attack" id="counter-valueT3A">0</div>
+			<div class="health" id="counter-valueT3H">0</div>
 			<img src="Images/card back.png" id="T4" alt="card back">
-			<div id="counter-valueT4A">0</div>
-			<div id="counter-valueT4H">0</div>
+			<div class="attack" id="counter-valueT4A">0</div>
+			<div class="health" id="counter-valueT4H">0</div>
 			<img src="Images/card back.png" id="B1" alt="card back">
-			<div id="counter-valueB1A">0</div>
-			<div id="counter-valueB1H">0</div>
+			<div class="attack" id="counter-valueB1A">0</div>
+			<div class="health" id="counter-valueB1H">0</div>
 			<img src="Images/card back.png" id="B2" alt="card back">
-			<div id="counter-valueB2A">0</div>
-			<div id="counter-valueB2H">0</div>
+			<div class="attack" id="counter-valueB2A">0</div>
+			<div class="health" id="counter-valueB2H">0</div>
 			<img src="Images/card back.png" id="B3" alt="card back">
-			<div id="counter-valueB3A">0</div>
-			<div id="counter-valueB3H">0</div>
+			<div class="attack" id="counter-valueB3A">0</div>
+			<div class="health" id="counter-valueB3H">0</div>
 			<img src="Images/card back.png" id="B4" alt="card back">
-			<div id="counter-valueB4A">0</div>
-			<div id="counter-valueB4H">0</div>
+			<div class="attack" id="counter-valueB4A">0</div>
+			<div class="health" id="counter-valueB4H">0</div>
 		</div>
 	</div>
 	<script src="counter.js"></script>
