--- a/Inscryption Counter.html
+++ b/Inscryption Counter.html
@@ -14,6 +14,8 @@
 			<div id="counter-valueL">0</div>
 			<button id="increment-btnR">+</button>
 			<button id="increment-btnL">+</button>
+			<button id="increment-btnR">+</button>
+			<button id="decrement-btn">-</button>
 			<img src="Images/card back.png" id="T1" alt="card back">
 			<div class="attack" id="counter-valueT1A">0</div>
 			<div class="health" id="counter-valueT1H">0</div>
