--- a/Inscryption Counter.html
+++ b/Inscryption Counter.html
@@ -14,10 +14,10 @@
 			<div id="counter-valueL">0</div>
 			<button id="increment-btnR">+</button>
 			<button id="increment-btnL">+</button>
-			<button id="increment-btnT1A">+</button>
-			<button id="decrement-btnT1A">-</button>
-			<button id="increment-btnT2A">+</button>
-			<button id="decrement-btnT2A">-</button>
+			<button class="change-button" id="increment-btnT1A">+</button>
+			<button class="change-button" id="decrement-btnT1A">-</button>
+			<button class="change-button" id="increment-btnT2A">+</button>
+			<button class="change-button" id="decrement-btnT2A">-</button>
 			<img src="Images/card back.png" id="T1" alt="card back">
 			<div class="attack" id="counter-valueT1A">0</div>
 			<div class="health" id="counter-valueT1H">0</div>
