--- a/Inscryption Counter.html
+++ b/Inscryption Counter.html
@@ -16,8 +16,12 @@
 			<button id="increment-btnL">+</button>
 			<button class="change-button" id="increment-btnT1A">+</button>
 			<button class="change-button" id="decrement-btnT1A">-</button>
+			<button class="change-button" id="increment-btnT1H">+</button>
+			<button class="change-button" id="decrement-btnT1H">-</button>
 			<button class="change-button" id="increment-btnT2A">+</button>
 			<button class="change-button" id="decrement-btnT2A">-</button>
+			<button class="change-button" id="increment-btnT2H">+</button>
+			<button class="change-button" id="decrement-btnT2H">-</button>
 			<img src="Images/card back.png" id="T1" alt="card back">
 			<div class="attack" id="counter-valueT1A">0</div>
 			<div class="health" id="counter-valueT1H">0</div>
