--- a/Inscryption Counter.html
+++ b/Inscryption Counter.html
@@ -22,6 +22,14 @@
 			<button onclick="decrement(this)" class="change-button" id="decrement-btnT2A">-</button>
 			<button onclick="increment(this)" class="change-button" id="increment-btnT2H">+</button>
 			<button onclick="decrement(this)" class="change-button" id="decrement-btnT2H">-</button>
+			<button onclick="increment(this)" class="change-button" id="increment-btnT3A">+</button>
+			<button onclick="decrement(this)" class="change-button" id="decrement-btnT3A">-</button>
+			<button onclick="increment(this)" class="change-button" id="increment-btnT3H">+</button>
+			<button onclick="decrement(this)" class="change-button" id="decrement-btnT3H">-</button>
+			<button onclick="increment(this)" class="change-button" id="increment-btnT4A">+</button>
+			<button onclick="decrement(this)" class="change-button" id="decrement-btnT4A">-</button>
+			<button onclick="increment(this)" class="change-button" id="increment-btnT4H">+</button>
+			<button onclick="decrement(this)" class="change-button" id="decrement-btnT4H">-</button>
 			<img src="Images/card back.png" id="T1" alt="card back">
 			<div class="attack" id="counter-valueT1A">0</div>
 			<div class="health" id="counter-valueT1H">0</div>
