--- a/Inscryption Counter.html
+++ b/Inscryption Counter.html
@@ -30,6 +30,22 @@
 			<button onclick="decrement(this)" class="change-button" id="decrement-btnT4A">-</button>
 			<button onclick="increment(this)" class="change-button" id="increment-btnT4H">+</button>
 			<button onclick="decrement(this)" class="change-button" id="decrement-btnT4H">-</button>
+			<button onclick="increment(this)" class="change-button" id="increment-btnB1A">+</button>
+			<button onclick="decrement(this)" class="change-button" id="decrement-btnB1A">-</button>
+			<button onclick="increment(this)" class="change-button" id="increment-btnB1H">+</button>
+			<button onclick="decrement(this)" class="change-button" id="decrement-btnB1H">-</button>
+			<button onclick="increment(this)" class="change-button" id="increment-btnB2A">+</button>
+			<button onclick="decrement(this)" class="change-button" id="decrement-btnB2A">-</button>
+			<button onclick="increment(this)" class="change-button" id="increment-btnB2H">+</button>
+			<button onclick="decrement(this)" class="change-button" id="decrement-btnB2H">-</button>
+			<button onclick="increment(this)" class="change-button" id="increment-btnB3A">+</button>
+			<button onclick="decrement(this)" class="change-button" id="decrement-btnB3A">-</button>
+			<button onclick="increment(this)" class="change-button" id="increment-btnB3H">+</button>
+			<button onclick="decrement(this)" class="change-button" id="decrement-btnB3H">-</button>
+			<button onclick="increment(this)" class="change-button" id="increment-btnB4A">+</button>
+			<button onclick="decrement(this)" class="change-button" id="decrement-btnB4A">-</button>
+			<button onclick="increment(this)" class="change-button" id="increment-btnB4H">+</button>
+			<button onclick="decrement(this)" class="change-button" id="decrement-btnB4H">-</button>
 			<img src="Images/card back.png" id="T1" alt="card back">
 			<div class="attack" id="counter-valueT1A">0</div>
 			<div class="health" id="counter-valueT1H">0</div>
